Cannot expand list of recipients of an attached email
Steps to reproduce:
- evolution-3.28.5-1.fc28.x86_64
- Maybe totally unimportant here: Edit > Preferences > Mail Preferences > HTML Messages > Plain Text Mode > HTML Mode: Show HTML if present" is enabled
- In dconf,
org.gnome.evolution.mail.address-compress
istrue
;org.gnome.evolution.mail.address-count
is5
. - Import the attached test case: fx.mbox
- Open it.
- In the 'email message attachment', next to the "To:" header, click on the "+" button, or click on the "..." link after the five listed recipients.
Expected outcome: Full list of recipients of attached email is shown.
Actual outcome: Cannot expand list of recipients of attached email.