I#155 - Cannot expand list of recipients of an attached email

Closes https://gitlab.gnome.org/GNOME/evolution/issues/155